{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "57553864-13c6-42db-a197-4fb61851d9b4",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "beaa003f-3dd3-451e-a35b-aaa704b071fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpellCast",
                    "type": "Button",
                    "id": "5fe7a135-0128-4aaf-bdd0-9e81c0db89f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "072ff7c8-464f-4dc9-be71-15e4994b3729",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "LoadLastSave",
                    "type": "Button",
                    "id": "57b3d3a8-30b8-4c4b-9d09-1ee321e413ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "RestartLevel",
                    "type": "Button",
                    "id": "d618b872-123e-444d-b9b1-011d470faca2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "de0cc1d0-cd70-46bc-b6ec-2806fd06e585",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b20b458d-26de-477c-aabe-ba93b3969499",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "acce5026-b2e7-498b-b296-e95f1599586d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0ebf52f4-66a7-4bcd-a21a-cd64d25357a5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cc6aa052-e47b-46a2-839a-eec9029459b5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "475caf71-207f-4d85-a0d9-7742a02d253f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpellCast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c1b0cac-6e6a-4016-96b5-163312dd86fa",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1570a286-7b53-4e80-81a2-4223f01486d3",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d755a2f-0d50-4f59-bd00-010f6c7ae78e",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LoadLastSave",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}